update transformer to work with pretrain dataset

--- a/Multihead_fixation_prediction_v1.ipynb
+++ b/Multihead_fixation_prediction_v1.ipynb
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-05 13:41:37.526024: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA\n",
+      "2025-02-06 11:41:38.418691: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-05 13:41:37.591949: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-05 13:41:37.610718: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-06 11:41:38.487824: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-06 11:41:38.506937: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
       "Seed set to 42\n"
      ]
     },
@@ -128,7 +128,16 @@
     "\n",
     "num_fix = NUM_FIX\n",
     "num_features = NUM_FEATURES\n",
-    "ablation = False"
+    "ablation = False\n",
+    "\n",
+    "# 293 participants in the fine-tunind dataset, \n",
+    "# 293 other participants (children) in the pretraining dataset\n",
+    "use_pretrain_dataset = True  \n",
+    "\n",
+    "if use_pretrain_dataset:\n",
+    "    file = 'data/30fixations_pretrain_no_padding_sentence_word_pos.csv'\n",
+    "else:\n",
+    "    file = 'data/30fixations_no_padding_sentence_word_pos.csv'"
    ]
   },
   {
@@ -439,9 +448,7 @@
     "        self, \n",
     "        csv_file, \n",
     "        transform=None, \n",
-    "        target_transform=None, \n",
-    "        dropPhonologyFeatures = True, \n",
-    "        dropPhonologySubjects = True,     \n",
+    "        target_transform=None,  \n",
     "        num_folds: float = 10,\n",
     "        ):\n",
     "        \"\"\"\n",
@@ -455,7 +462,8 @@
     "        data = pd.read_csv(csv_file)\n",
     "        \n",
     "        # changing dyslexia labels to 0 and 1\n",
-    "        data['group'] = data['group'] + 0.5\n",
+    "        if {'group'}.issubset(data.columns):   # not the case for pretrain dataset\n",
+    "            data['group'] = data['group'] + 0.5\n",
     "        \n",
     "        # log-transforming frequency\n",
     "        to_transform = ['frequency', 'predictability', 'fix_dur'] #\n",
@@ -466,15 +474,15 @@
     "        data = data.drop(columns = ['fix_x', 'fix_y', 'fix_index'])  \n",
     "        \n",
     "        # center reading sopeed in case we need to predict it\n",
-    "        data['Reading_speed'] = (data['Reading_speed'] - data['Reading_speed'].mean())/data['Reading_speed'].std(ddof=0)\n",
+    "        if {'Reading_speed'}.issubset(data.columns):\n",
+    "            data['Reading_speed'] = (data['Reading_speed'] - data['Reading_speed'].mean())/data['Reading_speed'].std(ddof=0)\n",
     "        \n",
-    "        if ablation == True:\n",
+    "        if {'sex', 'Grade'}.issubset(data.columns):\n",
     "            data = data.drop(columns = ['sex', 'Grade'])\n",
-    "            convert_columns = ['direction']\n",
-    "        else:\n",
-    "            convert_columns = ['Grade', 'direction'] \n",
+    "            \n",
+    "        convert_columns = ['direction']\n",
     "        \n",
-    "        if dropPhonologyFeatures == True:\n",
+    "        if {'IQ', 'Sound_detection', 'Sound_change'}.issubset(data.columns):\n",
     "            data = data.drop(columns = ['IQ', 'Sound_detection', 'Sound_change'])\n",
     "        \n",
     "        for column in convert_columns:\n",
@@ -482,14 +490,9 @@
     "            data = pd.concat([data, pd.get_dummies(data[column], \n",
     "                                    prefix=prefix)], axis=1)\n",
     "            data = data.drop(columns = column)\n",
-    "        #data = data.drop(columns = ['Grade_dummy_0', 'direction_dummy_0'])\n",
-    "            \n",
-    "        if dropPhonologySubjects == True:\n",
-    "            # Drop subjects\n",
-    "            data.dropna(axis = 0, how = 'any', inplace = True)\n",
-    "        else:\n",
-    "            # Drop columns\n",
-    "            data.dropna(axis = 1, how = 'any', inplace = True)\n",
+    "\n",
+    "        data.dropna(axis = 0, how = 'any', inplace = True)\n",
+    "\n",
     "            \n",
     "        # rearrange columns (I need demogrpahic information to come last)\n",
     "#         cols = ['item', 'subj', 'group', 'Reading_speed', 'fix_dur', 'landing', 'word_length',\n",
@@ -498,38 +501,56 @@
     "#                  'direction_dummy_LEFT', 'direction_dummy_RIGHT', 'direction_dummy_UP',\n",
     "#                  'sex', 'Age', 'Grade_dummy_1', 'Grade_dummy_2', 'Grade_dummy_3', 'Grade_dummy_4',\n",
     "#                  'Grade_dummy_5', 'Grade_dummy_6']\n",
-    "        cols = ['item', 'subj', 'group', 'Reading_speed', 'fix_dur',\n",
-    "               'landing', 'word_length', 'predictability', 'frequency', \n",
-    "                'number.morphemes', 'next_fix_dist', 'sac_ampl', 'sac_angle', \n",
-    "                'sac_vel', 'rel.position', 'direction_dummy_LEFT', \n",
-    "                'direction_dummy_RIGHT', 'direction_dummy_DOWN'] # temporary\n",
+    "        if {'Reading_speed'}.issubset(data.columns):\n",
+    "            cols = ['item', 'subj', 'group', 'Reading_speed', 'fix_dur',\n",
+    "                   'landing', 'word_length', 'predictability', 'frequency', \n",
+    "                    'number.morphemes', 'next_fix_dist', 'sac_ampl', 'sac_angle', \n",
+    "                    'sac_vel', 'rel.position', 'direction_dummy_LEFT', \n",
+    "                    'direction_dummy_RIGHT', 'direction_dummy_DOWN'] # temporary\n",
+    "        else:\n",
+    "            cols = ['item', 'subj', 'fix_dur',\n",
+    "                   'landing', 'word_length', 'predictability', 'frequency', \n",
+    "                    'number.morphemes', 'next_fix_dist', 'sac_ampl', 'sac_angle', \n",
+    "                    'sac_vel', 'rel.position', 'direction_dummy_LEFT', \n",
+    "                    'direction_dummy_RIGHT', 'direction_dummy_DOWN'] # temporary\n",
     "        data = data[cols]\n",
     "        \n",
     "        # Record features that are used for prediction\n",
-    "        self._features = [i for i in data.columns if i not in ['group', 'item', 'subj', 'Reading_speed']]\n",
+    "        if {'Reading_speed'}.issubset(data.columns):\n",
+    "            self._features = [i for i in data.columns if i not in ['group', 'item', 'subj', 'Reading_speed']]\n",
+    "        else:\n",
+    "            self._features = [i for i in data.columns if i not in ['item', 'subj']]\n",
     "        self._data = pd.DataFrame()\n",
     "        # Add sentence IDs and subject IDs\n",
     "        self._data[\"sn\"] = data[\"item\"]\n",
     "        self._data[\"subj\"] = data[\"subj\"]\n",
     "        # Add labels\n",
-    "        self._data[\"group\"] = data[\"group\"]\n",
-    "        self._data[\"reading_speed\"] = data[\"Reading_speed\"]\n",
+    "        if {'Reading_speed'}.issubset(data.columns):\n",
+    "            self._data[\"group\"] = data[\"group\"]\n",
+    "            self._data[\"reading_speed\"] = data[\"Reading_speed\"]\n",
+    "        else:\n",
+    "            self._data[\"group\"] = -1\n",
+    "            self._data[\"reading_speed\"] = -1\n",
     "        \n",
     "        # Add features used for prediction\n",
     "        for feature in self._features:\n",
     "            self._data[feature] = data[feature]\n",
     "\n",
-    "        # Distribute subjects across stratified folds\n",
+    "#         # Distribute subjects across stratified folds\n",
     "        self._num_folds = num_folds\n",
     "        self._folds = [[] for _ in range(num_folds)]\n",
-    "        dyslexic_subjects = self._data[self._data[\"group\"] == 1][\"subj\"].unique()\n",
-    "        control_subjects = self._data[self._data[\"group\"] == 0][\"subj\"].unique()\n",
-    "        random.shuffle(dyslexic_subjects)\n",
-    "        random.shuffle(control_subjects)\n",
-    "        for i, subj in enumerate(dyslexic_subjects):\n",
+    "        just_subjects = self._data[\"subj\"].unique()\n",
+    "        random.shuffle(just_subjects)\n",
+    "        for i, subj in enumerate(just_subjects):\n",
     "            self._folds[i % num_folds].append(subj)\n",
-    "        for i, subj in enumerate(control_subjects):\n",
-    "            self._folds[num_folds - 1 - i % num_folds].append(subj)\n",
+    "#         dyslexic_subjects = self._data[self._data[\"group\"] == 1][\"subj\"].unique()\n",
+    "#         control_subjects = self._data[self._data[\"group\"] == 0][\"subj\"].unique()\n",
+    "#         random.shuffle(dyslexic_subjects)\n",
+    "#         random.shuffle(control_subjects)\n",
+    "#         for i, subj in enumerate(dyslexic_subjects):\n",
+    "#             self._folds[i % num_folds].append(subj)\n",
+    "#         for i, subj in enumerate(control_subjects):\n",
+    "#             self._folds[num_folds - 1 - i % num_folds].append(subj)\n",
     "        for fold in self._folds:\n",
     "            random.shuffle(fold)\n",
     "\n",
@@ -663,9 +684,9 @@
     "        self.mask_token_id = mask_token_id\n",
     "        self.mask_ignore_token_ids = set([*mask_ignore_token_ids, pad_token_id])\n",
     "        \n",
-    "        self.positional_encoding = PositionalEncoding(d_model=self.d_model, \n",
-    "                                                      max_len=self.embed_dim)\n",
-    "      #  self.positional_encoding = AbsolutePositionalEmbedding(dim = self.d_model)\n",
+    "      #  self.positional_encoding = PositionalEncoding(d_model=self.d_model, \n",
+    "      #                                                max_len=self.embed_dim)\n",
+    "      #  self.positional_encoding = AbsolutePositionalEmbedding(dim = self.d_model)  THIS IS SO BAD!\n",
     "        self.positional_encoding = CustomPositionalEncoding(fixations = self.embed_dim, \n",
     "                                                            features = self.d_model)\n",
     "        self.transformer = nn.MultiheadAttention(embed_dim = self.d_model,  \n",
@@ -720,13 +741,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "12cc4038",
+   "execution_count": 12,
+   "id": "8c30ce45",
    "metadata": {},
    "outputs": [],
    "source": [
     "NUM_FOLDS = 10\n",
-    "test_fold = 3\n",
+    "test_fold = 2\n",
     "dev_fold = 2\n",
     "train_folds = [\n",
     "                fold\n",
@@ -735,8 +756,8 @@
     "            ]\n",
     "\n",
     "preprocessor = EyetrackingDataPreprocessor(\n",
-    "    csv_file = 'data/30fixations_no_padding_sentence_word_pos.csv', # 'data/fixation_dataset_30fix_padded.csv',  \n",
-    "    num_folds = NUM_FOLDS\n",
+    "    csv_file = file, # 'data/fixation_dataset_30fix_padded.csv',  \n",
+    "   num_folds = NUM_FOLDS\n",
     ")\n",
     "\n",
     "train_dataset = EyetrackingDataset(\n",
@@ -764,33 +785,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: Train Loss: 0.6550, Test Loss: 0.5569\n",
-      "Epoch 51: Train Loss: 0.0840, Test Loss: 0.1024\n",
-      "Epoch 101: Train Loss: 0.0812, Test Loss: 0.1124\n",
-      "Epoch 151: Train Loss: 0.0782, Test Loss: 0.0903\n",
-      "Epoch 201: Train Loss: 0.0791, Test Loss: 0.0850\n",
-      "Epoch 251: Train Loss: 0.0794, Test Loss: 0.1052\n",
-      "Epoch 301: Train Loss: 0.0785, Test Loss: 0.0882\n",
-      "Epoch 351: Train Loss: 0.0779, Test Loss: 0.0833\n"
+      "Epoch 1: Train Loss: 0.9064, Test Loss: 0.7462\n",
+      "Epoch 51: Train Loss: 0.1154, Test Loss: 0.1325\n"
      ]
     }
    ],
    "source": [
-    "#train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2)\n",
     "test_loader = torch.utils.data.DataLoader(dev_dataset, batch_size=BATCH_SIZE)\n",
     "\n",
     "trainer = TransformerWithCustomPositionalEncoding(embed_dim = 30,\n",
     "                                                  num_heads = 14, \n",
     "                                                  d_model = NUM_FEATURES,\n",
-    "                                                  num_layers= 1).to(device)\n",
+    "                                                  num_layers= 2).to(device)\n",
     "\n",
     "# # Setup optimizer to optimize model's parameters\n",
-    "optimizer = Adam(trainer.parameters(), lr=3e-3)\n",
+    "optimizer = Adam(trainer.parameters(), lr=1e-3)\n",
     "\n",
-    "epochs = 700\n",
-    "epoch_count = 0\n",
+    "epochs = 201\n",
+    "\n",
     "for epoch in range(epochs):\n",
-    "    epoch_count += 1\n",
     "    epoch_loss = 0.0\n",
     "    \n",
     "    train_loader = torch.utils.data.DataLoader(train_dataset, \n",
@@ -847,16 +860,13 @@
     "\n",
     "    # Print out what's happening every 10 epochs\n",
     "    if epoch % 50 == 0:\n",
-    "        print(f'Epoch {epoch+1}: Train Loss: {train_loss:.4f}, Test Loss: {test_loss:.4f}')\n",
-    "\n",
-    "#print('Input: ', X[0, 0:15])\n",
-    "#print('Predictions: ', train_preds[0, 0:15])"
+    "        print(f'Epoch {epoch+1}: Train Loss: {train_loss:.4f}, Test Loss: {test_loss:.4f}')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cacd209",
+   "id": "a52e9e5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_preds[7][0:4]"
+    "test_preds[3]"
    ]
   }
  ],
