--- a/Multihead_fixation_prediction_v1.ipynb
+++ b/Multihead_fixation_prediction_v1.ipynb
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-06 11:46:00.067296: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA\n",
+      "2025-02-07 10:01:11.727492: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-06 11:46:00.134860: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-06 11:46:00.154232: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-07 10:01:11.804427: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-07 10:01:11.822642: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
       "Seed set to 42\n"
      ]
     },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "id": "91aec7d2",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
     "\n",
     "# 293 participants in the fine-tunind dataset, \n",
     "# 293 other participants (children) in the pretraining dataset\n",
-    "use_pretrain_dataset = True  \n",
+    "use_pretrain_dataset = True\n",
     "\n",
     "if use_pretrain_dataset:\n",
     "    file = 'data/30fixations_pretrain_no_padding_sentence_word_pos.csv'\n",
@@ -226,6 +226,40 @@
     "        # Initialize a learnable positional encoding matrix\n",
     "        self.encoding = nn.Parameter(torch.zeros(fixations, features)).to(device)\n",
     "        nn.init.xavier_uniform_(self.encoding)  # Xavier initialization for better training stability\n",
+    "        \n",
+    "    def forward(self, x, mask = None):\n",
+    "        if mask is not None:\n",
+    "            # Apply the mask to ignore padded positions\n",
+    "            pos_encoding = self.encoding  * mask\n",
+    "        else:\n",
+    "            pos_encoding = self.encoding\n",
+    "        return x + pos_encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7a12edfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AnnasPositionalEncoding(nn.Module):\n",
+    "    \"\"\"Learnable positional encoding for both features and fixations\n",
+    "    Assumes input `x` is of shape [batch_size, fixations, embed_dim]\"\"\"\n",
+    "    def __init__(self, fixations = 30, features = None):\n",
+    "        super(AnnasPositionalEncoding, self).__init__()\n",
+    "        \n",
+    "        # Initialize a learnable positional encoding matrix for fixations\n",
+    "        self.fix_encoding = nn.Parameter(torch.zeros(fixations, 1)).to(device)\n",
+    "        nn.init.xavier_uniform_(self.fix_encoding)  # Xavier initialization for better training stability\n",
+    "        self.fix_encoding = self.fix_encoding.expand(-1, features)\n",
+    "        \n",
+    "        # Initialize a learnable positional encoding matrix for features\n",
+    "        self.feat_encoding = nn.Parameter(torch.zeros(1, features)).to(device)\n",
+    "        nn.init.xavier_uniform_(self.feat_encoding)  # Xavier initialization for better training stability\n",
+    "        self.feat_encoding = self.feat_encoding.expand(fixations, -1)\n",
+    "        \n",
+    "        self.encoding = self.fix_encoding + self.feat_encoding\n",
     "        \n",
     "    def forward(self, x, mask = None):\n",
     "        if mask is not None:\n",
@@ -645,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "id": "c9034822",
    "metadata": {},
    "outputs": [],
@@ -685,8 +719,10 @@
     "      #  self.positional_encoding = PositionalEncoding(d_model=self.d_model, \n",
     "      #                                                max_len=self.embed_dim)\n",
     "      #  self.positional_encoding = AbsolutePositionalEmbedding(dim = self.d_model)  THIS IS SO BAD!\n",
-    "        self.positional_encoding = CustomPositionalEncoding(fixations = self.embed_dim, \n",
-    "                                                            features = self.d_model)\n",
+    "      #  self.positional_encoding = CustomPositionalEncoding(fixations = self.embed_dim,  # this is the best\n",
+    "      #                                                      features = self.d_model)\n",
+    "        self.positional_encoding = AnnasPositionalEncoding(fixations = self.embed_dim, \n",
+    "                                                        features = self.d_model)\n",
     "        self.transformer = nn.MultiheadAttention(embed_dim = self.d_model,  \n",
     "                                                 num_heads = self.num_heads, \n",
     "                                                 bias = True,\n",
@@ -739,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "id": "8c30ce45",
    "metadata": {},
    "outputs": [],
@@ -754,7 +790,7 @@
     "            ]\n",
     "\n",
     "preprocessor = EyetrackingDataPreprocessor(\n",
-    "    csv_file = file, # 'data/fixation_dataset_30fix_padded.csv',  \n",
+    "    csv_file = file, \n",
     "   num_folds = NUM_FOLDS\n",
     ")\n",
     "\n",
@@ -775,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0fb3021e",
    "metadata": {},
    "outputs": [
@@ -783,11 +819,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: Train Loss: 0.9064, Test Loss: 0.7462\n",
-      "Epoch 51: Train Loss: 0.1154, Test Loss: 0.1325\n",
-      "Epoch 101: Train Loss: 0.1017, Test Loss: 0.1168\n",
-      "Epoch 151: Train Loss: 0.0988, Test Loss: 0.1120\n",
-      "Epoch 201: Train Loss: 0.0983, Test Loss: 0.1103\n"
+      "Epoch 1: Train Loss: 0.9559, Test Loss: 0.8326\n",
+      "Epoch 51: Train Loss: 0.0887, Test Loss: 0.1043\n"
      ]
     }
    ],
@@ -797,12 +830,12 @@
     "trainer = TransformerWithCustomPositionalEncoding(embed_dim = 30,\n",
     "                                                  num_heads = 14, \n",
     "                                                  d_model = NUM_FEATURES,\n",
-    "                                                  num_layers= 2).to(device)\n",
+    "                                                  num_layers= 1).to(device)\n",
     "\n",
     "# # Setup optimizer to optimize model's parameters\n",
     "optimizer = Adam(trainer.parameters(), lr=1e-3)\n",
     "\n",
-    "epochs = 201\n",
+    "epochs = 551\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    epoch_loss = 0.0\n",
@@ -866,17 +899,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "a52e9e5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11030423184407803"
+       "0.07905171221228921"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,17 +920,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "5e3113b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.1022, device='cuda:0')"
+       "tensor(0.0302, device='cuda:0')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,20 +946,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "116b55b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([False,  True, False, False, False, False, False, False,  True, False,\n",
-       "         True, False, False, False, False, False,  True, False,  True, False,\n",
-       "        False,  True, False, False, False, False, False, False, False, False],\n",
+       "tensor([ True, False, False, False, False, False,  True, False, False, False,\n",
+       "        False,  True, False, False, False, False,  True, False, False, False,\n",
+       "        False,  True, False, False, False, False, False,  True, False, False],\n",
        "       device='cuda:0')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,112 +970,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "b24f0005",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.2361e-01, -1.6595e+00, -2.3182e+00, -6.9829e-01,  2.4089e+00,\n",
-       "         -1.4930e+00, -2.4103e-01, -2.4944e-01,  4.8171e-02, -7.7563e-01,\n",
-       "         -1.4809e+00, -1.8095e-02, -1.2296e+00, -4.3962e-01],\n",
-       "        [-7.5833e-01,  2.9049e-01, -2.0366e+00, -5.8411e-01,  2.4695e+00,\n",
-       "         -1.5339e+00, -5.9210e-01, -5.7798e-01,  2.2441e+00, -6.5480e-01,\n",
-       "         -1.5058e+00, -4.7117e-01, -1.6217e+00,  1.8499e-01],\n",
-       "        [ 7.8649e-01, -7.9724e-01, -2.3838e+00, -5.7975e-01,  2.5963e+00,\n",
-       "         -1.7136e+00, -2.6885e-01, -2.9437e-01, -3.0244e-02, -5.0110e-01,\n",
-       "         -1.5299e+00, -3.4308e-01,  6.7863e-01, -2.2863e-01],\n",
-       "        [ 1.8693e+00,  2.2401e+00, -1.8483e+00, -4.9292e-01,  2.1182e+00,\n",
-       "         -1.2301e+00, -5.4966e-01, -5.5172e-01, -1.0799e-01, -1.2996e-01,\n",
-       "         -1.3880e+00, -5.2528e-01,  7.4925e-01, -6.3740e-01],\n",
-       "        [-1.8330e-01, -1.0979e+00, -2.9531e-01, -5.8088e-01,  1.0153e+00,\n",
-       "          4.6971e-01, -7.2711e-01, -7.4341e-01,  5.8167e-03, -6.6871e-01,\n",
-       "         -1.1998e+00, -5.6453e-01,  6.9731e-01, -2.6647e-01],\n",
-       "        [-1.4845e-01,  1.1764e-01, -3.3735e-01, -8.6651e-01,  1.5112e+00,\n",
-       "          6.0361e-01, -5.5120e-01, -5.7650e-01,  9.8386e-02, -7.7861e-01,\n",
-       "         -1.0968e+00, -5.3868e-01,  6.5454e-01, -7.6243e-02],\n",
-       "        [-3.3311e-01,  4.7523e-01, -3.8356e-01, -7.8470e-01,  1.3282e+00,\n",
-       "          5.8139e-01,  7.7020e-02,  7.9533e-02,  7.5952e-02,  1.8656e-01,\n",
-       "         -1.2604e+00, -8.8399e-01,  6.2367e-01,  1.1810e-02],\n",
-       "        [ 1.3417e+00, -1.1574e+00, -9.3905e-01, -4.2443e-01, -1.2365e+00,\n",
-       "         -8.3842e-01, -5.6450e-01, -5.7757e-01,  1.1130e-02, -3.6349e-01,\n",
-       "         -5.0995e-01, -2.1712e-01,  6.8566e-01, -3.0804e-01],\n",
-       "        [ 1.4128e+00,  1.1276e-01, -5.3838e-01, -4.0733e-01, -9.8638e-01,\n",
-       "         -6.8818e-01,  6.9339e-02,  6.4672e-02,  2.7864e-02,  1.7564e-01,\n",
-       "         -5.1120e-01, -3.5901e-01,  6.6003e-01, -1.5255e-01],\n",
-       "        [ 1.2921e+00, -1.1928e+00,  9.6321e-01, -6.3553e-01, -2.4555e+00,\n",
-       "          8.2423e-01, -7.1161e-01, -7.3650e-01,  9.4803e-02, -8.4500e-01,\n",
-       "         -5.6780e-01, -3.1372e-01,  6.3845e-01,  1.0058e-01],\n",
-       "        [-4.7621e-01, -6.0843e-01,  7.9570e-01, -7.6864e-01, -3.0946e+00,\n",
-       "          7.3618e-01, -2.0376e-01, -2.5221e-01,  1.8964e+00, -7.2197e-01,\n",
-       "         -2.2469e-01,  2.2808e+00, -1.3681e+00, -3.5233e-01],\n",
-       "        [ 8.4189e-01, -9.2819e-01,  9.6869e-01, -6.2820e-01, -2.5650e+00,\n",
-       "          7.7670e-01, -4.0978e-01, -3.9080e-01,  6.2246e-01, -3.4645e-01,\n",
-       "         -1.7180e-01, -3.4420e-01, -1.2339e+00, -3.0582e-01],\n",
-       "        [ 1.7956e-01, -4.3315e-01,  9.3481e-01, -5.4763e-01, -2.6491e+00,\n",
-       "          8.2515e-01, -3.5427e-01, -3.3688e-01,  2.0846e+00, -3.9412e-01,\n",
-       "         -4.9082e-01, -6.0014e-01, -1.4769e+00, -2.4885e-02],\n",
-       "        [ 1.5162e+00, -1.0046e+00,  6.2657e-01, -6.9648e-01, -2.8115e+00,\n",
-       "          8.2748e-01, -2.8917e-01, -3.2130e-01,  1.3146e-01, -6.2037e-01,\n",
-       "         -1.6211e-01, -1.8587e-01,  6.6166e-01, -2.4803e-02],\n",
-       "        [ 1.1469e+00, -3.7623e-01,  8.8615e-01, -7.8715e-01, -2.7041e+00,\n",
-       "          1.0255e+00, -5.6407e-01, -5.3233e-01,  3.2378e-01, -2.1332e-01,\n",
-       "         -3.0762e-01, -3.7943e-01, -1.3711e+00, -3.0108e-01],\n",
-       "        [ 1.6067e+00, -2.4628e-01,  8.1678e-01, -5.7706e-01, -3.3052e+00,\n",
-       "          1.2377e+00, -1.4210e-01, -1.3254e-01,  2.9551e-01, -1.6218e-01,\n",
-       "         -3.2219e-01, -1.7214e-01, -1.0328e+00, -5.7155e-01],\n",
-       "        [ 6.5776e-01,  1.2153e-01,  7.3530e-01, -6.8054e-01, -2.8162e+00,\n",
-       "          7.8232e-01, -3.7987e-01, -3.8895e-01,  1.0350e-01, -3.5410e-01,\n",
-       "         -3.0740e-01, -6.9746e-01,  6.6727e-01, -1.9227e-01],\n",
-       "        [ 2.4454e-01,  4.8643e-01,  8.1514e-01, -6.5637e-01, -3.1878e+00,\n",
-       "          1.1469e+00, -5.0805e-01, -5.1882e-01,  1.4141e-01, -4.4021e-01,\n",
-       "         -3.1284e-01, -5.5223e-01,  6.5352e-01,  1.4194e-01],\n",
-       "        [-4.1442e-01,  1.6466e+00,  7.5437e-01, -7.4955e-01, -3.1706e+00,\n",
-       "          7.7986e-01,  5.9241e-02,  7.5282e-02,  3.9155e-02,  3.1253e-01,\n",
-       "         -5.5639e-01, -1.0160e+00,  5.5740e-01,  2.5124e-01],\n",
-       "        [ 2.5028e+00, -1.0433e+00, -1.6265e-01, -4.5093e-01,  6.6366e-01,\n",
-       "         -5.9365e-01, -4.9503e-01, -5.0450e-01,  2.1668e-01, -2.1133e-01,\n",
-       "         -8.3178e-02, -5.3585e-02,  6.7684e-01,  9.5859e-02],\n",
-       "        [ 6.6921e-01, -3.3448e-01, -4.8325e-01, -4.0465e-01,  6.4626e-01,\n",
-       "         -9.4432e-01, -3.5089e-01, -3.6691e-01,  2.2068e-02, -5.0490e-01,\n",
-       "         -1.3565e-01, -3.4242e-01,  6.0536e-01, -2.3049e-02],\n",
-       "        [ 1.4505e+00,  8.2005e-01, -2.2673e-01, -3.6175e-01,  5.6301e-01,\n",
-       "         -6.1016e-01, -4.3335e-01, -4.4515e-01, -5.9500e-02, -4.5857e-01,\n",
-       "          2.1616e-01, -5.7080e-01,  7.0853e-01, -4.9771e-01],\n",
-       "        [ 1.1457e+00, -1.9829e+00, -1.9879e+00,  2.3055e+00,  2.4079e+00,\n",
-       "         -1.8267e+00, -1.8626e-01, -1.9368e-01,  3.1156e-03, -2.7461e-01,\n",
-       "          2.8888e-01, -8.0459e-01,  6.6900e-01, -3.1355e-01],\n",
-       "        [ 1.6363e+00, -1.7875e+00, -2.9978e-01,  2.3325e+00,  4.8538e-01,\n",
-       "         -5.1613e-01, -2.6690e-01, -2.7081e-01,  4.9925e-01, -8.2873e-01,\n",
-       "          1.2068e+00, -2.8509e-02, -1.3839e+00, -3.6961e-01],\n",
-       "        [-9.3300e-01, -1.0066e+00, -7.8573e-01,  2.2714e+00,  8.5707e-01,\n",
-       "         -8.3714e-01, -4.0578e-01, -4.1745e-01,  2.6376e-02, -4.0048e-01,\n",
-       "          5.7466e-01, -2.1383e-01,  6.9295e-01,  1.1910e-01],\n",
-       "        [-4.5000e-01, -5.4291e-01, -6.4003e-01,  2.2159e+00,  1.1439e+00,\n",
-       "         -5.8885e-01, -7.9993e-02, -8.7625e-02, -1.0251e-02, -2.0106e-01,\n",
-       "          7.0105e-01, -6.1598e-01,  6.9947e-01, -9.1035e-02],\n",
-       "        [ 6.2282e-02,  1.6035e+00, -5.7147e-01,  2.2742e+00,  7.5479e-01,\n",
-       "         -5.3621e-01, -5.0794e-01, -5.2996e-01, -6.8019e-02, -7.9429e-01,\n",
-       "          6.3609e-01, -5.4220e-01,  7.4087e-01, -3.4406e-01],\n",
-       "        [-1.1087e+00, -1.7247e+00, -1.7000e+00,  1.7224e+00,  2.1786e+00,\n",
-       "         -1.5666e+00, -5.3827e-01, -5.2984e-01,  3.5507e-01, -3.3226e-01,\n",
-       "          1.1814e+00, -7.8374e-01,  5.0087e-01,  7.2545e-01],\n",
-       "        [ 2.4787e+00,  1.9015e+00, -1.4607e+00,  1.7837e+00,  1.6953e+00,\n",
-       "         -1.3757e+00, -4.6858e-01, -4.8002e-01, -5.2813e-02, -4.7987e-01,\n",
-       "          1.2637e+00, -6.6640e-01,  7.5186e-01, -5.4368e-01],\n",
-       "        [ 6.1454e-01, -1.5038e+00,  2.6820e-01,  1.6107e+00,  4.8699e-01,\n",
-       "         -3.8245e-01, -6.0450e-01, -5.9798e-01,  2.0267e+00, -7.0351e-01,\n",
-       "          1.5815e+00, -9.9629e-03, -1.4681e+00, -4.4265e-01]], device='cuda:0')"
+       "tensor([ 0.0262, -0.4967,  0.2115,  0.1399,  0.7068,  0.1085,  1.0049, -0.7341,\n",
+       "         0.4735,  0.8448,  0.6696,  0.6672, -0.8257,  0.1225, -0.6434, -0.2050,\n",
+       "        -0.7120,  0.5624,  1.3149,  1.3353,  0.3539,  0.3716, -0.4989, -0.0949,\n",
+       "        -0.8262, -0.5557,  0.2967, -0.1037, -0.1172, -0.1015], device='cuda:0')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_preds[3]"
+    "test_preds[2, :,0]"
    ]
   }
  ],
