refactor get_params_nested()

--- a/Multihead_fixation_prediction_v3_10_cross_val.ipynb
+++ b/Multihead_fixation_prediction_v3_10_cross_val.ipynb
@@ -959,30 +959,12 @@
     "    selected_pars = dict()\n",
     "    for k in paramdict:\n",
     "        selected_pars[k] = random.sample(list(paramdict[k]), 1)[0] \n",
-    "    factor = [1, 2, 4, 8]    \n",
-    "    if selected_pars[\"upscale_dim\"] == 14:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"14\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([14*x for x in factor], 1)[0]\n",
-    "    if selected_pars[\"upscale_dim\"] == 32:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"32\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([32*x for x in factor], 1)[0]\n",
-    "    if selected_pars[\"upscale_dim\"] == 64:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"64\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([64*x for x in factor], 1)[0]\n",
-    "    if selected_pars[\"upscale_dim\"] == 128:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"128\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([128*x for x in factor], 1)[0]\n",
-    "    if selected_pars[\"upscale_dim\"] == 256:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"256\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([256*x for x in factor], 1)[0]\n",
-    "    if selected_pars[\"upscale_dim\"] == 512:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"512\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([512*x for x in factor], 1)[0]\n",
-    "    if selected_pars[\"upscale_dim\"] == 1024:\n",
-    "        selected_pars[\"num_heads\"] = random.sample(list(nested[\"1024\"]), 1)[0]\n",
-    "        selected_pars[\"inner_dim\"] = random.sample([1024*x for x in factor], 1)[0]\n",
+    "    factor = [1, 2, 4, 8]\n",
+    "    dimension = selected_pars[\"upscale_dim\"]\n",
+    "    selected_pars[\"num_heads\"] = random.sample(list(nested[f\"{dimension}\"]), 1)[0]\n",
+    "    selected_pars[\"inner_dim\"] = random.sample([dimension*x for x in factor], 1)[0]\n",
     "        \n",
-    "    return selected_pars"
+    "    return selected_pars\n"
    ]
   },
   {
@@ -1190,18 +1172,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "ed749936",
+   "execution_count": 30,
+   "id": "8ef5c118",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "old_folds = preprocessor._folds\n"
+    "parameter_sample[0][\"inner_dim\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "961dee27",
+   "id": "88738871",
    "metadata": {},
    "outputs": [
     {
@@ -1217,6 +1210,83 @@
    ],
    "source": [
     "preprocessor._folds == old_folds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e085e2db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "hyperparameter_space = {\n",
+    "    \"transformer\": {\n",
+    "        \"lr\": np.linspace(1e-03, 1e-05, num=15), \n",
+    "        \"num_layers\": [1, 2, 4, 8, 16],      \n",
+    "        \"dropout\": np.linspace(0, 0.5, num=15),\n",
+    "        \"mask_prob\": np.linspace(0, 0.5, num=15),\n",
+    "        \"upscale_dim\": [14, 32, 64, 128, 256, 512, 1024],\n",
+    "        \"batch_size\": [256],\n",
+    "        # \"num_heads\" is specified in get_params_nested()\n",
+    "        # \"inner_dim\" is specified in get_params_nested()\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "nested_space = {\n",
+    "    \"14\": [1, 2, 7, 14],\n",
+    "    \"32\": [1, 4, 8, 16, 32],\n",
+    "    \"64\": [1, 8, 16, 32, 64],\n",
+    "    \"128\": [1, 8, 32, 64, 128],\n",
+    "    \"256\": [1, 32, 64, 128, 256],\n",
+    "    \"512\": [32, 64, 128, 256, 512],\n",
+    "    \"1024\": [32, 64, 128, 256, 512], \n",
+    "}\n",
+    "\n",
+    "def get_params_nested(paramdict, nested) -> dict:\n",
+    "    selected_pars = dict()\n",
+    "    for k in paramdict:\n",
+    "        selected_pars[k] = random.sample(list(paramdict[k]), 1)[0] \n",
+    "    factor = [1, 2, 4, 8]\n",
+    "    dimension = selected_pars[\"upscale_dim\"]\n",
+    "    selected_pars[\"num_heads\"] = random.sample(list(nested[f\"{dimension}\"]), 1)[0]\n",
+    "    selected_pars[\"inner_dim\"] = random.sample([dimension*x for x in factor], 1)[0]\n",
+    "        \n",
+    "    return selected_pars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "85c168d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'lr': 0.00015142857142857145,\n",
+       "  'num_layers': 8,\n",
+       "  'dropout': 0.3214285714285714,\n",
+       "  'mask_prob': 0.2857142857142857,\n",
+       "  'upscale_dim': 1024,\n",
+       "  'batch_size': 256,\n",
+       "  'num_heads': 64,\n",
+       "  'inner_dim': 8192}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "used_test_params = []\n",
+    "parameter_sample = [\n",
+    "    get_params_nested(hyperparameter_space[\"transformer\"], nested_space) for _ in range(1)\n",
+    "]\n",
+    "parameter_sample"
    ]
   }
  ],
